fix: char apostrophe

--- a/data/benefits/javascript/strasbourg_eurometropole-fonds-daide-aux-jeunes-faj.yml
+++ b/data/benefits/javascript/strasbourg_eurometropole-fonds-daide-aux-jeunes-faj.yml
@@ -1,9 +1,9 @@
 label: fonds d'aide aux jeunes (FAJ)
 institution: strasbourg_eurometropole
-description: "LʼEurométropole de Strasbourg soutient les jeunes en difficultés
+description: "L'Eurométropole de Strasbourg soutient les jeunes en difficultés
   financières dans leur parcours d’insertion sociale ou professionnelle : coup
-  de pouce pour lʼentrée en apprentissage ou en alternance, aide à la
-  subsistance, aide dʼurgence, maintien dans le logement, aide au projet
+  de pouce pour l'entrée en apprentissage ou en alternance, aide à la
+  subsistance, aide d'urgence, maintien dans le logement, aide au projet
   professionnel, soutien pour des démarches de santé."
 prefix: le
 conditions_generales:
