Cache les aides Bafa général et Bafa approfondissement de la Caf de la Meurthe et Moselle. Crée une nouvelle aide BAFA / BAFD de la Caf de Meurthe et Moselle.

--- a/data/benefits/javascript/caf-meurthe-et-moselle-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-meurthe-et-moselle-aide-bafa-approfondissement.yml
@@ -19,10 +19,10 @@ conditions_generales:
 profils: []
 conditions:
   - Etre allocataire ou rattaché au dossier allocataire de vos parents.
+  - Se rapprocher de l'un des organismes de formation listés par la Caf de Meurthe-et-Moselle.
 interestFlag: _interetBafa
 type: bool
-unit: €
 periodicite: ponctuelle
-link: https://www.caf.fr/allocataires/caf-de-meurthe-et-moselle/offre-de-service/vie-professionnelle/les-aides-aux-formations-bafa-et-bafd
-instructions: https://www.caf.fr/allocataires/caf-de-meurthe-et-moselle/offre-de-service/vie-professionnelle/les-aides-aux-formations-bafa-et-bafd
+link: https://www.caf.fr/allocataires/caf-de-meurthe-et-moselle/offre-de-service/vie-personnelle/les-aides-aux-formations-bafa-et-bafd
+instructions: https://www.caf.fr/allocataires/caf-de-meurthe-et-moselle/offre-de-service/vie-personnelle/les-aides-aux-formations-bafa-et-bafd
 private: true
