--- a/data/benefits/javascript/caf-correze-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-correze-aide-bafa-approfondissement.yml
@@ -1,6 +1,7 @@
 label: aide au BAFA pour une session d'approfondissement ou de qualification
 institution: caf_correze
-description: Cette aide est mise à disposition par la CAF de la Corrèze pour aider
+description:
+  Cette aide est mise à disposition par la CAF de la Corrèze pour aider
   les jeunes à financer la troisième et dernière partie de leur formation au BAFA,
   en complément de l'aide nationale apportée par la CAF.
 conditions:
