--- a/data/benefits/javascript/caf-correze-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-correze-aide-bafa-generale.yml
@@ -1,6 +1,7 @@
 label: aide au BAFA pour une session de formation générale
 institution: caf_correze
-description: Cette aide est mise à disposition par la CAF de la Corrèze pour aider les jeunes à financer
+description:
+  Cette aide est mise à disposition par la CAF de la Corrèze pour aider les jeunes à financer
   la première partie de leur formation au BAFA, en complément de l'aide nationale
   apportée par la CAF.
 conditions:
