refactor: texte aide bafa approf. - CAF de la Corrèze

--- a/data/benefits/javascript/caf-correze-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-correze-aide-bafa-approfondissement.yml
@@ -6,7 +6,7 @@ description:
   en complément de l'aide nationale apportée par la CAF.
 conditions:
   - Avoir validé la session de formation générale et le stage de pratique.
-  - Etre inscrit en session d'approfondissement ou de qualification.
+  - Être inscrit en session d'approfondissement ou de qualification.
   - >-
     Effectuer son stage auprès d’un
 
