--- a/data/benefits/javascript/caf-meurthe-et-moselle-aide-bafa-bafd.yml
+++ b/data/benefits/javascript/caf-meurthe-et-moselle-aide-bafa-bafd.yml
@@ -4,7 +4,7 @@ description: Les aides aux formations BAFA et BAFD sont mises à disposition par
   la CAF de Meurthe-et-Moselle pour aider les jeunes à financer une partie de leurs stages,
   en complément de l'aide nationale apportée par la CAF.
 conditions:
-  - Etre allocataire ou rattaché au dossier allocataire de vos parents.
+  - Être allocataire ou rattaché au dossier allocataire de vos parents.
   - Se rapprocher de l'un des organismes de formation listés par la Caf de Meurthe-et-Moselle.
 conditions_generales:
   - type: age
