--- a/data/benefits/javascript/region_bourgogne_franche_comte-bourses-détudes-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/region_bourgogne_franche_comte-bourses-détudes-sanitaires-et-sociales.yml
@@ -19,7 +19,7 @@ profils:
         values:
           - terminale
 link: https://www.bourgognefranchecomte.fr/demande-de-bourse-sanitaire-et-sociale
-instructions: https://www.bourgognefranchecomte.fr/demande-de-bourse-sanitaire-et-sociale
+teleservice: https://ibssp.bourgognefranchecomte.fr/etudiant.php/compte/login
 prefix: les
 type: bool
 unit: €
