--- a/data/institutions/cc_pays_d_evian.yml
+++ b/data/institutions/cc_pays_d_evian.yml
@@ -1,4 +1,4 @@
-name: Communauté de communes pays d'Evian - vallée d'Abondance
+name: Communauté de communes pays d’Evian - vallée d’Abondance
 imgSrc: img/institutions/logo_cc_pays_d_evian.png
 prefix: de la
 type: epci
