Met à jour la carte illico liberté jeunes région ARA

--- a/data/benefits/javascript/region-auvergne-rhone-alpes-carte-ter-illico-liberte-jeunes.yml
+++ b/data/benefits/javascript/region-auvergne-rhone-alpes-carte-ter-illico-liberte-jeunes.yml
@@ -12,7 +12,7 @@ conditions_generales:
       - "84"
 profils: []
 conditions:
-  - Vous procurer la carte TER illico Liberté jeunes pour un montant annuel de
+  - Vous procurer la carte TER illico Liberté jeunes en ligne ou en gare pour un montant annuel de
     15€.
 type: bool
 unit: €
