--- a/data/benefits/javascript/region-auvergne-rhone-alpes-ter-illico-solidaire.yml
+++ b/data/benefits/javascript/region-auvergne-rhone-alpes-ter-illico-solidaire.yml
@@ -16,6 +16,7 @@ conditions_generales:
 profils: []
 link: https://www.ter.sncf.com/auvergne-rhone-alpes/tarifs-cartes/cartes-reduction/illico-solidaire
 teleservice: https://illicosolidaire.cba.fr/
+instructions: https://mmt.vsct.fr/sites/default/files/swt/CARA/2024-04/D%C3%A9pliant_ILLICO_SOLIDAIRE_2024.pdf
 prefix: la
 type: bool
 unit: €
