Met à jour les abonnements illico mensuel et hebdomadaire.

--- a/data/benefits/javascript/region-auvergne-rhone-alpes-abonnement-ter-illico.yml
+++ b/data/benefits/javascript/region-auvergne-rhone-alpes-abonnement-ter-illico.yml
@@ -15,7 +15,7 @@ profils: []
 conditions:
   - Choisir un trajet fréquent entre deux gares de la région.
   - Vous procurer l'abonnement TER Illico mensuel jeunes, dont le prix dépend du
-    trajet fréquent choisi.
+    trajet fréquent choisi (rentabilisé à partir de 5 trajets).
 type: bool
 unit: €
 periodicite: autre
