--- a/data/benefits/javascript/region-pays-de-la-loire-abonnement-tutti-26-illimite.yml
+++ b/data/benefits/javascript/region-pays-de-la-loire-abonnement-tutti-26-illimite.yml
@@ -1,6 +1,7 @@
 label: abonnement annuel Tutti -26 ans illimité
 institution: region_pays_de_la_loire
-description: L'Abonnement annuel Tutti -26 illimité permet la libre circulation sur
+description:
+  L'Abonnement annuel Tutti -26 illimité permet la libre circulation sur
   votre parcours habituel, en train ou en autocar régional dans les Pays de la
   Loire. Il s'adresse à toutes et tous (salariés ou salariées, étudiants et étudiantes,
   stagiaires...) pour simplifier vos déplacements quotidiens.
