--- a/data/benefits/javascript/hauts-de-france-mon-abo-etudiant-ter.yml
+++ b/data/benefits/javascript/hauts-de-france-mon-abo-etudiant-ter.yml
@@ -1,6 +1,7 @@
 label: abonnement Etudiant et Apprenti TER
 institution: hauts_de_france
-description: L'abonnement Etudiant et Apprenti TER permet d'avoir des tarifs réduits voire une
+description:
+  L'abonnement Etudiant et Apprenti TER permet d'avoir des tarifs réduits voire une
   totale gratuité sur les trajets en TER entre le lieu de résidence et le lieu
   d'études, de stage ou d'apprentissage.
 prefix: l’
