--- a/data/benefits/javascript/etat-passcolo-une-aide-financiere-pour-les-departs-en-colo.yml
+++ b/data/benefits/javascript/etat-passcolo-une-aide-financiere-pour-les-departs-en-colo.yml
@@ -5,20 +5,14 @@ description: Activités culturelles, sportives, rencontres... les colonies de
   et les jeunes. Cette aide permet de prendre en charge totalement ou
   partiellement le coût de la colonie.
 prefix: le
-conditions_generales:
-  - type: quotient_familial
-    operator: <
-    period: year
-    value: 1500
-profils:
-  - type: parent
 conditions:
   - Avoir un enfant dont lʼannée de naissance est 2013.
   - Consulter le catalogue des colos disponibles et contacter lʼorganisateur.
 type: float
 unit: €
-periodicite: autre
-montant: 350
-legend: maximum
+entity: individus
+openfiscaPeriod: thisMonth
 link: https://www.jeunes.gouv.fr/passcolo
 teleservice: https://www.jeunes.gouv.fr/le-pass-colo-en-3-etapes-2106
+periodicite: ponctuelle
+legend: maximum
