--- a/data/benefits/javascript/hauts-de-france-bourses-etudes-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/hauts-de-france-bourses-etudes-sanitaires-et-sociales.yml
@@ -1,6 +1,7 @@
 label: bourse d’Études Sanitaires et Sociales
 institution: hauts_de_france
-description: Cette aide de la Région Hauts-de-France vise à inciter les jeunes et les demandeurs
+description:
+  Cette aide de la Région Hauts-de-France vise à inciter les jeunes et les demandeurs
   d'emploi à se former dans les instituts et écoles de formation sanitaire et sociale en les soutenant
   financièrement pendant leurs études.
 conditions:
