--- a/data/benefits/javascript/region-pays-de-la-loire-carte-mezzo.yml
+++ b/data/benefits/javascript/region-pays-de-la-loire-carte-mezzo.yml
@@ -1,4 +1,4 @@
-label: carte mezzo
+label: carte Mezzo
 institution: region_pays_de_la_loire
 description:
   La carte Mezzo vous offre une réducation de -50% sur tous vos billets TER
