Met à jour le dispositif Avenir de la région Normandie.

--- a/data/benefits/javascript/region-normandie-dispositif-avenir.yml
+++ b/data/benefits/javascript/region-normandie-dispositif-avenir.yml
@@ -1,7 +1,8 @@
 label: "dispositif #Avenir"
 institution: region_normandie
 description: La Région finance une formation permettant d’effectuer un état des
-  lieux de votre parcours personnel et professionnel.
+  lieux de votre parcours personnel et professionnel. Les coûts pédagogiques sont
+  intégralement pris en charge par la Région Normandie.
 conditions:
   - Être en démarche d’orientation, de reconversion professionnelle, de
     renforcement de vos compétences ou à la recherche d’un accompagnement dans
