Corrige le name de Sophia Antipolis

--- a/data/institutions/intercommunalite_sophia_antipolis.yml
+++ b/data/institutions/intercommunalite_sophia_antipolis.yml
@@ -1,4 +1,4 @@
-name: Communauté d'Agglomération Sophie Antipolis
+name: Communauté d'Agglomération Sophia Antipolis
 imgSrc: img/institutions/logo_intercommunalite_sophia_antipolis.png
 type: epci
 code_siren: "240600585"
