--- a/data/benefits/javascript/bretagne-aide-code-permis.yml
+++ b/data/benefits/javascript/bretagne-aide-code-permis.yml
@@ -13,10 +13,10 @@ conditions:
   - Pouvoir montrer que l’absence de permis est un frein à la réalisation de
     votre projet.
   - Suivre l'une des formations de la région (<a target="_blank" rel="noopener" title="Formation Prépa Clés - Nouvelle fenêtre"
-    href="https://www.bretagne.bzh/aides/fiches/prepa-cles/">PREPA, </a><a target="_blank" rel="noopener" title="Formation QUALIF Emploi - Nouvelle fenêtre"
-    href="https://www.bretagne.bzh/aides/fiches/copie-de-qualif-emploi/">QUALIF Emploi, </a><a target="_blank" rel="noopener" title="Formation QUALIF Sanitaire et Social - Nouvelle fenêtre"
-    href="https://www.bretagne.bzh/aides/fiches/qualif-sanitaire-et-social/">QUALIF Sanitaire et Social, </a><a target="_blank" rel="noopener" title="Accompagnement à la Qualification - Nouvelle fenêtre"
-    href="https://europe.bzh/aides/fiches/accompagnement-a-la-qualification/">Accompagnement à la qualification, </a><a target="_blank" rel="noopener" title="Formations à la langue bretonne) - Nouvelle fenêtre"
+    href="https://www.bretagne.bzh/aides/fiches/prepa-cles/">PREPA</a>, <a target="_blank" rel="noopener" title="Formation QUALIF Emploi - Nouvelle fenêtre"
+    href="https://www.bretagne.bzh/aides/fiches/copie-de-qualif-emploi/">QUALIF Emploi</a>, <a target="_blank" rel="noopener" title="Formation QUALIF Sanitaire et Social - Nouvelle fenêtre"
+    href="https://www.bretagne.bzh/aides/fiches/qualif-sanitaire-et-social/">QUALIF Sanitaire et Social</a>, <a target="_blank" rel="noopener" title="Accompagnement à la Qualification - Nouvelle fenêtre"
+    href="https://europe.bzh/aides/fiches/accompagnement-a-la-qualification/">Accompagnement à la qualification</a>, <a target="_blank" rel="noopener" title="Formations à la langue bretonne) - Nouvelle fenêtre"
     href="https://www.bretagne.bzh/actions/langues-regionales/breton/se-former-langue-bretonne/">Formations à la langue bretonne</a>).
 conditions_generales:
   - type: age
