Met à jour image atmb

--- a/data/institutions/atmb.yml
+++ b/data/institutions/atmb.yml
@@ -1,4 +1,4 @@
 name: Autoroutes et Tunnel du Mont Blanc (ATMB)
-imgSrc: img/logo_atmb.png
+imgSrc: img//institutions/logo_atmb.png
 type: autre
 code_siren: "582056511"
