--- a/data/institutions/le-mans-sarthe-mobilites.yml
+++ b/data/institutions/le-mans-sarthe-mobilites.yml
@@ -1,4 +1,5 @@
-name: Le Pôle Métropolitain Mobilités Le Mans-Sarthes
+name: Pôle Métropolitain Mobilités Le Mans-Sarthes
 imgSrc: img/institutions/logo_le_mans_sarthes_mobilites.png
+préfix: du
 type: autre
 code_siren: "200051944"
