--- a/data/benefits/javascript/grand-est-aide-mobilite-internationale-etudiants.yml
+++ b/data/benefits/javascript/grand-est-aide-mobilite-internationale-etudiants.yml
@@ -29,5 +29,5 @@ montant: 1100
 legend: maximum
 periodicite: ponctuelle
 link: https://www.grandest.fr/vos-aides-regionales/aide-a-mobilite-internationale-etudiants/
-instructions: file:///Users/yasmineberrada/Downloads/annexe-1-reglement-mobilites-internationales-vf.pdf
+instructions: https://www.grandest.fr/wp-content/uploads/2023/07/annexe-1-reglement-mobilites-internationales-vf.pdf
 teleservice: https://messervices.grandest.fr/account-management/crge-demandeurs/ux/#/login?redirectTo=https:%2F%2Fmesservices.grandest.fr%2Faides%2F%23%2Fcrge%2Fconnecte%2FF_BMI3%2Fdepot%2Fsimple&jwtKey=jwt-crge-portail-depot-demande-aides&footer=https:%2F%2Fwww.grandest.fr%2Fmentions-legales%2F,Mentions%20l%C3%A9gales,_blank;https:%2F%2Fmesservices.grandest.fr%2Faides%2F%23%2Fcrge%2Fdonnees-personnelles,Donn%C3%A9es%20personnelles,_self
