--- a/data/benefits/javascript/caf-nord-aide-vacances.yml
+++ b/data/benefits/javascript/caf-nord-aide-vacances.yml
@@ -1,6 +1,7 @@
 label: aides aux vacances
 institution: caf_nord
-description: Les Caf du Nod propose deux aides financières à ses allocataires pour partir en vacances.
+description:
+  Les Caf du Nod propose deux aides financières à ses allocataires pour partir en vacances.
   L'aide aux vacances familiales (avf) permet de profiter d'un séjour en famille et l'aide aux vacances
   enfants (ave) favorise le départ des enfants en colonies de vacances. Le montant de l'aide dépend du
   quotient familial et du nombre d'enfants avec un bonus pour les bénéficiaires de l'aeeh.
@@ -19,9 +20,8 @@ conditions:
   - Etre allocataire de la Caf du Nord.
   - Choisir votre séjour familiale ou le séjour de votre enfant sur vacaf.org.
 type: float
-unit: %
+unit: "%"
 periodicite: ponctuelle
 legend: du prix du séjour maximum
 montant: 75
 link: https://www.caf.fr/allocataires/caf-du-nord/offre-de-service/vie-personnelle/les-aides-vacaf
-
