--- a/data/benefits/javascript/region-ile-de-france-aide-culture-sport-labaz.yml
+++ b/data/benefits/javascript/region-ile-de-france-aide-culture-sport-labaz.yml
@@ -1,5 +1,5 @@
 label: aide à la pratique sportive, artistique et culturelle
-prefix: l'
+prefix: l’
 institution: region_ile_de_france
 description:
   L'aide à la pratique sportive, artistique et culturelle est proposée
