--- a/data/benefits/javascript/region_nouvelle_aquitaine-stages-à-létranger-–-infra-bac.yml
+++ b/data/benefits/javascript/region_nouvelle_aquitaine-stages-à-létranger-–-infra-bac.yml
@@ -1,6 +1,6 @@
-label: stages à l'étranger (lycéens ou lycéennes)
+label: stages à lʼétranger pour les lycéens, stagiaires et apprentis (public infra-bac)
 institution: region_nouvelle_aquitaine
-description: La Région finance une partie de votre stage à l'étranger d'une
+description: La Région finance une partie de votre stage à lʼétranger d'une
   durée de 2 à 4 semaines.
 prefix: les
 conditions_generales:
