--- a/data/benefits/javascript/ville-paris-cheque-vacances.yml
+++ b/data/benefits/javascript/ville-paris-cheque-vacances.yml
@@ -20,6 +20,7 @@ profils: []
 conditions:
   - Avoir réservé ou prévoir de réserver un hébergement touristique (hôtel, camping, auberge, etc.) pour un séjour d’une durée minimum de 2 nuits et 3 jours.
   - "Partir en autonomie : votre séjour doit se dérouler sans encadrement professionnel ou bénévole et sans la présence des parents, grands-parents, ou tout autre membre de la famille."
+  - Disposer d’une autorisation parentale et joindre une copie de la pièce d’identité de l’adulte co-signataire du dossier pour les candidats mineurs non émancipés.
   - Ne pas bénéficier d’un hébergement à titre gratuit pour les vacances en question.
   - "Partir seul ou accompagné de 5 amis maximum (donc à 6 maximum en tout) : si vous partez à plusieurs, toutes les personnes éligibles au dispositif Paris Jeunes Vacances peuvent bénéficier des 200 euros."
   - "Ne pas avoir déjà bénéficié de cette aide durant l’année civile en cours : l’aide ne peut être attribuée qu’une fois par an."
