--- a/data/benefits/javascript/caf-nord-aide-vacances.yml
+++ b/data/benefits/javascript/caf-nord-aide-vacances.yml
@@ -1,7 +1,7 @@
 label: aides aux vacances
 institution: caf_nord
 description:
-  Les Caf du Nod propose deux aides financières à ses allocataires pour partir en vacances.
+  Les Caf du Nord propose deux aides financières à ses allocataires pour partir en vacances.
   L'aide aux vacances familiales (avf) permet de profiter d'un séjour en famille et l'aide aux vacances
   enfants (ave) favorise le départ des enfants en colonies de vacances. Le montant de l'aide dépend du
   quotient familial et du nombre d'enfants avec un bonus pour les bénéficiaires de l'aeeh.
