--- a/data/benefits/javascript/region-ile-de-france-aide-culture-sport-labaz.yml
+++ b/data/benefits/javascript/region-ile-de-france-aide-culture-sport-labaz.yml
@@ -17,7 +17,7 @@ conditions_generales:
     values:
       - "11"
   - type: age
-    operator: >=
+    operator: ">="
     value: 15
   - type: age
     operator: <=
