fix: nextjs a supprimé la fonction export mais la intégré dans build si on ajoute l'option dans next.config.js

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,7 +164,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('contribuer/package-lock.json') }}-
       - name: Build static site
-        run: cd contribuer && npm run export
+        run: cd contribuer && npm run build
   openfisca_test_generation:
     name: OpenFisca test generation
     needs: [install, install_openfisca, check_data_file_consistency]
