--- a/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-ticket-sport-culture-et-nature.yml
+++ b/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-ticket-sport-culture-et-nature.yml
@@ -1,10 +1,9 @@
 label: Ticket Sport Culture et Nature
-institution: intercommunalite_golfe_du_morbihan_vannes_agglomeration
+institution: ville-de-vannes
 description: La Ville de Vannes organise l’opération « Ticket Sport Culture
   Nature » pendant les vacances scolaires. Il s'agit de stages culturels ou
   sportifs proposés à la journée, à la demie-journée ou à la semaine et encadrés
-  par des Éducateurs Municipaux. Attention, les périodes d'inscription numérique
-  étant assez courtes, veillez à bien consulter les dates d'inscription sur le
+  par des Éducateurs Municipaux. Attention, les périodes d'inscription étant assez courtes, veillez à bien consulter les dates d'inscription sur le
   site de la ville.
 prefix: le
 conditions_generales:
