--- a/data/benefits/openfisca/pass_sport.yml
+++ b/data/benefits/openfisca/pass_sport.yml
@@ -9,9 +9,9 @@ description: Le pass Sport est une aide de 50 euros qui permet de financer une p
 conditions:
   - Vérifier votre boîte e-mail connue des caisses vous délivrant des prestations sociales (CAF, CROUS ou MSA) pour trouver votre pass Sport.
   - Consulter la <a
-  target="_blank" title="FAQQ - Nouvelle fenêtre"
-  rel="noopener"
-  href="https://pass.sports.gouv.fr/v2/une-question">Foire aux Questions du pass'Sport</a>.
+    target="_blank" title="FAQ - Nouvelle fenêtre"
+    rel="noopener"
+    href="https://pass.sports.gouv.fr/v2/une-question">Foire aux Questions du pass'Sport</a>.
 link: https://pass.sports.gouv.fr
 instructions: https://pass.sports.gouv.fr/obtenir-mon-code/
 prefix: le
