Mise à jour du libellé de la tâche
Co-authored-by: Simon Hamery <shamery@free.fr>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -94,7 +94,7 @@ jobs:
     needs: [deploy_eclipse_production, deploy_equinoxe_production]
     if: always() && github.ref == 'refs/heads/main' && (needs.deploy_eclipse_production.result == 'failure' || needs.deploy_equinoxe_production.result == 'failure')
     steps:
-      - name: Send CI failed message
+      - name: Send CD failed message
         shell: bash
         run: |
           curl -i -X POST -H 'Content-Type: application/json' -d '{"text": ":icon-danger: [équipe-tech] La mise en production a rencontré un problème sur la branche main ([lien](https://github.com/betagouv/aides-jeunes/actions/workflows/cd.yml?query=branch%3Amain+is%3Afailure))"}' ${{ secrets.MATTERMOST_ALERTING_URL }}
