--- a/data/benefits/javascript/etat-domiciliation-pour-les-personnes-sans-domicile-stable.yml
+++ b/data/benefits/javascript/etat-domiciliation-pour-les-personnes-sans-domicile-stable.yml
@@ -15,7 +15,7 @@ profils: []
 conditions:
   - Avoir un lien avec la commune pour laquelle vous demandez la domiciliation
     (vous y séjournez, vous y avez une activité professionnelle, vous y bénéficiez
-    d’un suivi social ou vous y avez des liens familiaux).
+    d’un suivi social ou vous y avez des liens familiaux, vous y exercez l’autorité parentale sur votre enfant mineur qui est scolarisé dans la commune).
   - Effectuer votre demande de domiciliation auprès d’un Centre Communal d’Action Sociale (CCAS),
     d’un Centre Intercommunal d’Action Sociale (CIAS), d’un organisme agréé ou directement
     auprès de la mairie pour les communes de moins de 1500 habitants.
