--- a/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-ticket-sport-culture-et-nature.yml
+++ b/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-ticket-sport-culture-et-nature.yml
@@ -1,18 +1,8 @@
 label: Ticket Sport Culture et Nature
 institution: ville-de-vannes
-description: La Ville de Vannes organise l’opération « Ticket Sport Culture
-  Nature » pendant les vacances scolaires. Il s'agit de stages culturels ou
-  sportifs proposés à la journée, à la demie-journée ou à la semaine et encadrés
-  par des Éducateurs Municipaux. Attention, les périodes d'inscription étant assez courtes, veillez à bien consulter les dates d'inscription sur le
-  site de la ville.
+description: La Ville de Vannes organise l’opération « Ticket Sport Culture Nature » pendant les vacances scolaires, pour vos enfants de 7 à 16 ans. Il s’agit de stages culturels ou sportifs proposés à la journée, à la demie-journée ou à la semaine et encadrés par des Éducateurs Municipaux. 
 prefix: le
 conditions_generales:
-  - type: age
-    operator: ">="
-    value: 7
-  - type: age
-    operator: <=
-    value: 16
   - type: communes
     values:
       - "56260"
@@ -20,12 +10,11 @@ conditions_generales:
     operator: <=
     period: month
     value: 2101
-profils: []
+profils:
+  - type: parent
 conditions:
-  - Consulter la liste et le calendrier des activités proposées sur le site de
-    la ville.
-  - Vérifier votre tarif sur le simulateur de la ville de Vannes, en fonction de
-    votre quotient familial.
+  - Consulter sur le site de la ville, la liste et le calendrier des activités proposées ainsi que les dates d’inscription (attention, celles-ci sont assez courtes).
+  - Vérifier votre tarif, compris entre 2 € et 10 € pour une demi-journée en fonction de votre quotient familial, sur le simulateur de la ville de Vannes.
   - Créer votre compte sur Vannes & vous.
 type: float
 unit: €
