--- a/data/benefits/javascript/caf-nord-aide-vacances.yml
+++ b/data/benefits/javascript/caf-nord-aide-vacances.yml
@@ -1,7 +1,7 @@
 label: aides aux vacances
 institution: caf_nord
 description:
-  Les Caf du Nord propose deux aides financières à ses allocataires pour partir en vacances.
+  La Caf du Nord propose deux aides financières à ses allocataires pour partir en vacances.
   L'aide aux vacances familiales (avf) permet de profiter d'un séjour en famille et l'aide aux vacances
   enfants (ave) favorise le départ des enfants en colonies de vacances. Le montant de l'aide dépend du
   quotient familial et du nombre d'enfants avec un bonus pour les bénéficiaires de l'aeeh.
@@ -14,10 +14,11 @@ conditions_generales:
     value: 850
     operator: "<="
     period: month
-profils: []
+profils:
+  - type: parent
 conditions:
   - Avoir au moins un enfant à charge né après le 1er janvier 2007.
-  - Etre allocataire de la Caf du Nord.
+  - Être allocataire de la Caf du Nord.
   - Choisir votre séjour familiale ou le séjour de votre enfant sur <a
     target="_blank" title="Liste des séjours - Nouvelle fenêtre"
     rel="noopener"
