--- a/data/benefits/javascript/caf-nord-aide-vacances.yml
+++ b/data/benefits/javascript/caf-nord-aide-vacances.yml
@@ -2,9 +2,9 @@ label: aides aux vacances
 institution: caf_nord
 description:
   La Caf du Nord propose deux aides financières à ses allocataires pour partir en vacances.
-  L'aide aux vacances familiales (avf) permet de profiter d'un séjour en famille et l'aide aux vacances
-  enfants (ave) favorise le départ des enfants en colonies de vacances. Le montant de l'aide dépend du
-  quotient familial et du nombre d'enfants avec un bonus pour les bénéficiaires de l'aeeh.
+  L’aide aux vacances familiales (avf) permet de profiter d’un séjour en famille et l’aide aux vacances
+  enfants (ave) favorise le départ des enfants en colonies de vacances. Le montant de l’aide dépend du
+  quotient familial et du nombre d’enfants avec un bonus pour les bénéficiaires de l’aeeh.
 prefix: les
 conditions_generales:
   - type: departements
@@ -17,7 +17,7 @@ conditions_generales:
 profils:
   - type: parent
 conditions:
-  - Avoir au moins un enfant à charge né après le 1er janvier 2007.
+  - Avoir au moins un enfant à charge.
   - Être allocataire de la Caf du Nord.
   - Choisir votre séjour familial ou le séjour de votre enfant sur <a
     target="_blank" title="Liste des séjours - Nouvelle fenêtre"
